<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backcolor">

    <TextView
        android:id="@+id/labelName"
        android:layout_width="match_parent"
        android:layout_height="30dip"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/placeholder_name"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelName"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPersonName"
        android:textColor="@color/labels"
        android:textColorHint="@color/placeholders"
        android:background="@color/textbox"
        android:hint="@string/placeholder_name"/>

    <TextView
        android:id="@+id/labelDescription"
        android:layout_width="match_parent"
        android:layout_height="30dip"
        android:layout_below="@+id/editName"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/placeholder_description"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelDescription"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/placeholders"
        android:background="@color/textbox"
        android:hint="@string/placeholder_name"/>

    <RadioGroup
        android:checkedButton="@+id/projectRadio"
        android:id="@+id/activityRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/radio_button_outline"
        android:orientation="horizontal"
        android:layout_below="@id/editDescription">

        <RadioButton
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:id="@+id/projectRadio"
                android:background="@drawable/activity_radio_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:text="@string/label_project"
                android:textColor="@color/white" />

        <RadioButton
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:id="@+id/taskRadio"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/activity_radio_button"
            android:button="@null"
            android:gravity="center"
            android:text="@string/label_task"
            android:textColor="@color/white" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/taskSpecs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:orientation="vertical"
        android:layout_below="@+id/activityRadioGroup">

        <TextView
            android:id="@+id/labelFor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_for"
            android:textColor="@color/white"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/editFor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textSize="15sp"
            android:hint="0 min"
            android:textColor="@color/labels"
            android:textColorHint="@color/placeholders"
            android:background="@color/textbox"/>

        <TextView
            android:id="@+id/labelIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_in"
            android:textColor="@color/white"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/editIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textSize="15sp"
            android:hint="0 min"
            android:textColor="@color/labels"
            android:textColorHint="@color/placeholders"
            android:background="@color/textbox"/>

    </LinearLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/button_save"
        android:layout_below="@+id/taskSpecs"
        android:textColor="@color/white"
        android:background="@drawable/radio_button_outline"/>


</RelativeLayout>