<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backcolor">

    <TextView
        android:id="@+id/labelName"
        android:layout_width="match_parent"
        android:layout_height="30dip"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/placeholder_name"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelName"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPersonName"
        android:textColor="@color/labels"
        android:hint="@string/placeholder_name"
        android:textColorHint="@color/placeholders"
        android:background="@color/textbox"/>

    <TextView
        android:id="@+id/labelDescription"
        android:layout_width="match_parent"
        android:layout_height="30dip"
        android:layout_below="@+id/editName"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/placeholder_description"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelDescription"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPersonName"
        android:textColor="@color/labels"
        android:textColorHint="@color/placeholders"
        android:background="@color/textbox"
        android:hint="@string/placeholder_name"/>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editDescription"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/button_save"
        android:textColor="@color/white"
        android:background="@drawable/radio_button_outline"/>
</RelativeLayout>